--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Mini course by Paulo Dichone",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [
     "graphql",
